@@ -9,9 +9,12 @@ import org.springframework.ai.chat.prompt.Prompt;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -20,14 +23,14 @@ public class ChatService {
     private final ChatClient chatClient;
     private final AnthropicApi anthropicApi;
 
-    public void requestDocument() throws IOException {
+    public void requestDocument() throws IOException, URISyntaxException {
 
         var response = chatClient.prompt()
-                .user("reate a Word document with our product roadmap")
+                .user("texto basico com 1 linha ")
                 .options(AnthropicChatOptions.builder()
                         .model("claude-sonnet-4-5")
-                        .skill(AnthropicApi.AnthropicSkill.XLSX)
-                        .maxTokens(4096)
+                        .skill(AnthropicApi.AnthropicSkill.PDF)
+                        .maxTokens(300)
                         .build())
                 .call()
                 .chatResponse();
@@ -38,7 +41,11 @@ public class ChatService {
             AnthropicApi.FileMetadata metadata = anthropicApi.getFileMetadata(fileId);
             byte[] content = anthropicApi.downloadFile(fileId);
 
-            Files.wriete(Path.of(metadata.filename()), content);
+            Path resourcesPath = Paths.get(
+                    Objects.requireNonNull(getClass().getClassLoader().getResource("")).toURI()
+            );
+
+            Files.write(resourcesPath.resolve(metadata.filename()), content);
         }
     }
 }
